# datatrawl

./: .gitignore  CHANGELOG.md  CITATION.cff  MANIFEST.in  Makefile  README.md  datatrawlpresentation.patch  pyproject.toml
.github/workflows/: tests.yml
assets/: architecture.tex  architecture.tikz  datatrawl-figures.sty  fig-checkpoint-resume.tex  fig-checkpoint-resume.tikz  fig-plugin-ecosystem.tex  fig-plugin-ecosystem.tikz  fig-scan-conveyor.tex  fig-scan-conveyor.tikz  fig-scratch-bound.tex  fig-scratch-bound.tikz  fig-survey-filter.tex  fig-survey-filter.tikz  logo-banner.tex  logo.tex  social-card.tex  trawlmark.tikz
docs/: ADDING_AN_ANALYZER.md  ADDING_A_READER.md  ADDING_A_SOURCE.md  ADDING_A_TELESCOPE.md  CLI_OUTPUT.md  DATATRAIL_BOUNDARY.md  Datatrawl_DS001_v1_0_Data_Sheet.tex  Datatrawl_DS001_v1_1_Data_Sheet.tex  Datatrawl_DS001_v1_2_Data_Sheet.tex  Datatrawl_DS001_v1_3_Data_Sheet.tex  Datatrawl_UG001_v1_0_User_Guide.tex  Datatrawl_UG001_v1_1_User_Guide.tex  Datatrawl_UG001_v1_2_User_Guide.tex  Datatrawl_UG001_v1_3_User_Guide.tex  TROUBLESHOOTING.md
docs/presentation/: README.md  beamercolorthemewvu.sty  datatrawl_tutorial.tex
examples/: external_analyzer.py  match_inventories.py  per_event_companions.py
src/datatrawl/: __init__.py  accel.py  analyzer_base.py  cli.py  instruments.py  interfaces.py  invpaths.py  pipeline.py  registry.py
src/datatrawl/instruments/: chime.yaml  gbo.yaml  hco.yaml  kko.yaml
src/datatrawl/plugins/: __init__.py
src/datatrawl/plugins/analyzers/: spectrum.py
src/datatrawl/plugins/readers/: _baseband_format.py  chime_baseband.py  outrigger_gains_reader.py  outrigger_n2_reader.py
src/datatrawl/plugins/sources/: __init__.py  _datatrail.py  _selection.py  cadc_datatrail.py  local.py
tests/: external_analyzer.py  external_analyzer_fixture.py  test_accel.py  test_cadc_offline.py  test_cli_smoke.py  test_engine_safety.py  test_event_selection_and_shape.py  test_external_plugin.py  test_instruments_extends.py  test_inventory_meta.py  test_invpaths.py  test_per_event_scan.py  test_preflight_and_cert.py  test_recon_expand.py  test_survey_empty_events.py  test_synthetic_pipeline.py
tools/: apply_docs_output_cleanup.py
